WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31045
REGRESSION (
r48573
): JSC may incorrectly cache chain lookups with a dictionary at the head of the chain
https://bugs.webkit.org/show_bug.cgi?id=31045
Summary
REGRESSION (r48573): JSC may incorrectly cache chain lookups with a dictionar...
Oliver Hunt
Reported
2009-11-02 22:12:56 PST
Tracking bug <
rdar://problem/7358358
>
Attachments
fixeration -- haven't yet done a full build so no new expected results yet
(5.16 KB, patch)
2009-11-02 22:20 PST
,
Oliver Hunt
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2009-11-02 22:20:04 PST
Created
attachment 42362
[details]
fixeration -- haven't yet done a full build so no new expected results yet
Gavin Barraclough
Comment 2
2009-11-02 22:29:18 PST
Comment on
attachment 42362
[details]
fixeration -- haven't yet done a full build so no new expected results yet r is me.
Oliver Hunt
Comment 3
2009-11-02 22:51:26 PST
Committed
r50443
Geoffrey Garen
Comment 4
2009-11-03 11:13:43 PST
Shouldn't the isDictionary() tests be isUncacheableDictionary() tests?
Geoffrey Garen
Comment 5
2009-11-03 11:18:31 PST
> Shouldn't the isDictionary() tests be isUncacheableDictionary() tests?
No, I guess not, since a dictionary base could acquire a property that had previously been resolved on a prototype.
Geoffrey Garen
Comment 6
2009-11-03 11:19:20 PST
r=me too.
Oliver Hunt
Comment 7
2009-11-03 11:19:37 PST
(In reply to
comment #5
)
> > Shouldn't the isDictionary() tests be isUncacheableDictionary() tests? > > No, I guess not, since a dictionary base could acquire a property that had > previously been resolved on a prototype.
exactly
Geoffrey Garen
Comment 8
2009-11-03 11:20:30 PST
Might be worth verifying that the SNES benchmark didn't regress.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug