REGRESSION (r48573): JSC may incorrectly cache chain lookups with a dictionary at the head of the chain https://bugs.webkit.org/show_bug.cgi?id=31045

Reviewed by Gavin Barraclough.

Add guards to prevent caching of prototype chain lookups with dictionaries at the
head of the chain.  Also add a few tighter assertions to cached prototype lookups
to catch this in future.

Canonical link: https://commits.webkit.org/41876@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50443 268f45cc-cd09-0410-ab3c-d52691b4dbfc